--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <option>МК-111.fbx</option>
             <option>ПВ-001.fbx</option>
             <option>ПВ-002.fbx</option>
+            <option>ПВ-003.fbx</option>
         </select>
         <select id="materials">
             <option value="gabro_color.png">Габро</option>
